--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -18,17 +18,15 @@
 <body>
     <header>
         <div class="container">
-            <nav>
-                <div class="row navigation">
-                    <div class="col-12 col-md-6">
-                        <ul class="menu">
-                            <li class="menu-item"><a href="#">Log in</a></li>
-                            <li class="menu-item"><a href="#">Sign up</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
-                    </div>
+            <nav class="row navigation">
+                <div class="col-12 col-md-6">
+                    <ul class="menu">
+                        <li class="menu-item"><a href="#">Log in</a></li>
+                        <li class="menu-item"><a href="#">Sign up</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
                 </div>
             </nav>
             <div class="slider-text">
@@ -97,14 +95,14 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
