--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -6,11 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>module-10</title>
 </head>
 
 <body>
-
+    <header>
+        <div class="container">
+            <nav class="navigation">
+                <div class="logo"><a href="#">MoGo</a></div>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">About</a></li>
+                    <li class="menu-item"><a href="#">Service</a></li>
+                    <li class="menu-item"><a href="#">Work</a></li>
+                    <li class="menu-item"><a href="#">Blog</a></li>
+                    <li class="menu-item"><a href="#">Contact</a></li>
+                    <li class="menu-item"><a href="#"><i class="shopping_cart-icon"></i></a></li>
+                    <li class="menu-item"><a href="#"><i class="search-icon"></i></a></li>
+                </ul>
+            </nav>
+            <div class="header-text">
+                <h1>Creative Template</h1>
+                <p>Welcome to MoGo</p>
+                <a href="#">Learn more</a>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
