--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -21,8 +21,20 @@
                     <li class="menu-item"><a href="#">Work</a></li>
                     <li class="menu-item"><a href="#">Blog</a></li>
                     <li class="menu-item"><a href="#">Contact</a></li>
-                    <li class="menu-item"><a href="#"><i class="shopping_cart-icon"></i></a></li>
-                    <li class="menu-item"><a href="#"><i class="search-icon"></i></a></li>
+                    <li class="menu-item"><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                width="18px" height="15px">
+                                <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
+                                    d="M17.726,3.663 L17.727,3.663 L15.252,9.163 L15.252,9.163 C15.130,9.434 14.866,9.627 14.555,9.648 L14.555,9.648 L7.427,10.123 L7.839,11.299 L15.600,11.299 C16.511,11.299 17.250,12.038 17.250,12.950 C17.250,13.861 16.511,14.600 15.600,14.600 C14.689,14.600 13.950,13.861 13.950,12.950 L6.250,12.950 C6.250,13.861 5.511,14.600 4.600,14.600 C3.689,14.600 2.950,13.861 2.950,12.950 C2.950,12.038 3.689,11.299 4.600,11.299 L6.091,11.299 L2.915,2.225 L1.025,2.225 C0.569,2.225 0.200,1.855 0.200,1.400 C0.200,0.944 0.569,0.575 1.025,0.575 L3.500,0.575 C3.860,0.575 4.163,0.807 4.276,1.128 L4.279,1.127 L4.759,2.500 L16.975,2.500 C17.431,2.500 17.800,2.869 17.800,3.325 C17.800,3.445 17.773,3.559 17.726,3.663 ZM5.337,4.150 L6.862,8.507 L13.951,8.034 L15.699,4.150 L5.337,4.150 Z" />
+                            </svg>
+                        </a></li>
+                    <li class="menu-item"><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                width="18px" height="18px">
+                                <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
+                                    d="M17.317,14.983 C17.615,15.281 17.800,15.694 17.800,16.150 C17.800,17.061 17.061,17.800 16.150,17.800 C15.694,17.800 15.282,17.615 14.983,17.316 L14.983,17.316 L10.147,12.481 C9.165,13.061 8.023,13.400 6.800,13.400 C3.155,13.400 0.200,10.445 0.200,6.800 C0.200,3.155 3.155,0.200 6.800,0.200 C10.445,0.200 13.400,3.155 13.400,6.800 C13.400,8.023 13.061,9.165 12.481,10.147 L17.317,14.983 L17.317,14.983 ZM6.800,1.849 C4.066,1.849 1.850,4.066 1.850,6.800 C1.850,9.534 4.066,11.750 6.800,11.750 C9.534,11.750 11.750,9.534 11.750,6.800 C11.750,4.066 9.534,1.849 6.800,1.849 Z" />
+                            </svg>
+                        </a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -32,6 +44,139 @@
             </div>
         </div>
     </header>
+    <article>
+        <div class="container">
+            <div class="headline">
+                <h2>We work with <span>Amazing Services</span></h2>
+            </div>
+            <div class="services_wrap">
+                <ul class="services_items">
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>Photography</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>Web Design</h3>
+                            <p>
+                                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>Creativity</h3>
+                            <p>
+                                Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>seo</h3>
+                            <p>
+                                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>Css/Html</h3>
+                            <p>
+                                Lorem dolor sit amet, consectetur adipiscing elit, sed do
+                                tempor.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="services-item">
+                        <div class="services-item-text">
+                            <h3>digital</h3>
+                            <p>
+                                Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="headline">
+                <h2>Who we are <span>Meet our team</span></h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
+            <div class="teams">
+                <!-- Team-item 1 -->
+                <div class="teams_items">
+                    <div class="teams_image-box">
+                        <img srcset="./img/Matthew_Dix.png 380w, ./img/Matthew_Dix@2x.png 760w" sizes="380px"
+                            height="470" src="./img/Matthew_Dix.png" alt="" />
+                        <div class="teams_shadow-box">
+                            <div class="social_media">
+                                <a href="#"><i class="facebook-icon"></i></a>
+                                <a href="#"><i class="twitter-icon"></i></a>
+                                <a href="#"><i class="pinterest-icon"></i></a>
+                                <a href="#"><i class="instagram-icon"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Matthew Dix</h3>
+                    <h4>Graphic Design</h4>
+                </div>
+                <!-- Team-item 2 -->
+                <div class="teams_items">
+                    <div class="teams_image-box">
+                        <img srcset="./img/Christopher_Campbell.png 380w, ./img/Christopher_Campbell@2x.png 760w"
+                            sizes="380px" height="470" src="./img/Christopher_Campbell.png" alt="" />
+                        <div class="teams_shadow-box">
+                            <div class="social_media">
+                                <a href="#"><i class="facebook-icon"></i></a>
+                                <a href="#"><i class="twitter-icon"></i></a>
+                                <a href="#"><i class="pinterest-icon"></i></a>
+                                <a href="#"><i class="instagram-icon"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Christopher Campbell</h3>
+                    <h4>Branding/UX design</h4>
+                </div>
+                <!-- Team-item 3 -->
+                <div class="teams_items">
+                    <div class="teams_image-box">
+                        <img srcset="./img/Michael_Fertig.png 380w, ./img/Michael_Fertig@2x.png 760w" sizes="380px"
+                            height="470" src="./img/Michael_Fertig.png" alt="" />
+                        <div class="teams_shadow-box">
+                            <div class="social_media">
+                                <a href="#"><i class="facebook-icon"></i></a>
+                                <a href="#"><i class="twitter-icon"></i></a>
+                                <a href="#"><i class="pinterest-icon"></i></a>
+                                <a href="#"><i class="instagram-icon"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Michael Fertig</h3>
+                    <h4>Developer</h4>
+                </div>
+            </div>
+            <footer>
+                <p>© 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
+                <form action="#" method="GET">
+                    <input type="text" placeholder="Your Email..." />
+                    <input type="button" value="subscribe" />
+                </form>
+            </footer>
+        </div>
+    </article>
 </body>
 
 </html>
