--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -212,15 +212,15 @@
                     <h4>Developer</h4>
                 </div>
             </div>
-            <footer>
-                <p>© 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
-                <form action="#" method="GET">
-                    <input type="text" placeholder="Your Email..." />
-                    <input type="button" value="subscribe" />
-                </form>
-            </footer>
         </div>
     </article>
+    <footer class="container">
+        <p>© 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
+        <form action="#" method="GET">
+            <input type="text" placeholder="Your Email..." />
+            <input type="button" value="subscribe" />
+        </form>
+    </footer>
 
     <!-- --------------- SVG Sprite --------------- -->
     <svg display="none">
